--- a/html_basic/html_basic/index.html
+++ b/html_basic/html_basic/index.html
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>My Cool First Page</title>
-  </head>
-  <body>
-    <h1>Hello World! 👋</h1>
-    <h2>This is my amazing webpage</h2>
-    <h3>Let’s add some fun content!</h3>
+<body>
+  <h1>Welcome to My Page</h1>
+  <h2>Learning HTML is Fun!</h2>
+  <h3>Let’s Keep Going</h3>
 
-    <p>This is my very first paragraph. Yay!</p>
-    <p>Here comes the second paragraph. HTML is easy!</p>
-    <p>This is paragraph number three. I’m getting good at this!</p>
-    <p>And this is the fourth one. I'm a web builder now!</p>
+  <p>This is paragraph one.</p>
+  <p>Here is another sentence in paragraph two.</p>
+  <p>Wow! A third paragraph already?</p>
+  <p>Yes! This is the fourth one.</p>
 
-    <a href="https://example.com" target="_blank">
-      <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200" />
-    </a>
-  </body>
-</html>
+  <a href="https://example.com" target="_blank">
+    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Cool Image" width="200" />
+  </a>
+</body>
