--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -12,3 +12,5 @@
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Cool Image" width="200" />
   </a>
 </body>
+
+<p><a href="tweets.html">See my tweet →</a></p>
