--- a/html_basic/index.html, tweets.html
+++ b/html_basic/index.html, tweets.html
@@ -7,14 +7,14 @@
   <body>
     <h1>Here’s an awesome tweet!</h1>
 
-    <!-- Embed a tweet (you can copy one from Twitter’s embed tool) -->
     <blockquote class="twitter-tweet">
-      <p lang="en" dir="ltr">Learning frontend is so fun! 😄</p>&mdash; Amanda Lucas
-      (<a href="https://twitter.com/your_handle/status/1234567890">Tweet link</a>)
-    </blockquote>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <p lang="en" dir="ltr">Want to become a Software Engineer?<br><br>Follow this checklist:<br>✅ Do the hard work<br>✅ Trust the process<br>✅ Don’t quit<br><br>It’s that simple, and that hard.<br><br>Follow me @julienbarbier42 for more tips to get into tech.</p>&mdash; Julien Barbier ✨ (@julienbarbier42) 
+  <a href="https://twitter.com/julienbarbier42/status/1928459292677742813">April 24, 2024</a>
+</blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <blockquote class="twitter-tweet">
+      <p lang="en" dir="ltr">Learning frontend is so fun! 😄</p>&mdash; Amanda
 
-    <!-- Link back to your homepage -->
     <p><a href="index.html">← Back to Homepage</a></p>
   </body>
 </html>
