Update index.html and tweets.html

--- a/html_basic/index.html and tweets.html
+++ b/html_basic/index.html and tweets.html
@@ -2,19 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Tweets Page</title>
+    <title>My First Web Page</title>
   </head>
   <body>
-    <h1>Here’s an awesome tweet!</h1>
+    <p>Here’s a tweet I like:</p>
 
-    <blockquote class="twitter-tweet">
-  <p lang="en" dir="ltr">Want to become a Software Engineer?<br><br>Follow this checklist:<br>✅ Do the hard work<br>✅ Trust the process<br>✅ Don’t quit<br><br>It’s that simple, and that hard.<br><br>Follow me @julienbarbier42 for more tips to get into tech.</p>&mdash; Julien Barbier ✨ (@julienbarbier42) 
-  <a href="https://twitter.com/julienbarbier42/status/1928459292677742813">April 24, 2024</a>
-</blockquote>
+<blockquote class="twitter-tweet">
+  <a href="https://twitter.com/Interior/status/463440424141459456"></a>
+</blockquote> 
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <blockquote class="twitter-tweet">
-      <p lang="en" dir="ltr">Learning frontend is so fun! 😄</p>&mdash; Amanda
 
-    <p><a href="index.html">← Back to Homepage</a></p>
+<p><a href="index.html">Go back to homepage</a></p>
+    <p>Hello world!</p>
   </body>
 </html>
