--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,16 +1,79 @@
-<body>
-  <h1>Welcome to My Page</h1>
-  <h2>Learning HTML is Fun!</h2>
-  <h3>Let’s Keep Going</h3>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Deborah Akinbola - Homepage</title>
+  </head>
+  <body>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </header>
 
-  <p>This is paragraph one.</p>
-  <p>Here is another sentence in paragraph two.</p>
-  <p>Wow! A third paragraph already?</p>
-  <p>Yes! This is the fourth one.</p>
+    <main>
+      <article>
+        <h1>Welcome to My Webpage!</h1>
+        <h2>Learning Frontend Development</h2>
+        <h3>Fun with HTML</h3>
 
-  <a href="https://example.com" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Cool Image" width="200" />
-  </a>
-</body>
+        <p>This is my very first webpage and I'm excited to learn!</p>
+        <p>I'm learning how to build websites using HTML and CSS.</p>
+        <p>It may look simple now, but big things are coming!</p>
+        <p>Stay tuned for more projects and updates from my journey.</p>
 
-<p><a href="tweets.html">See my tweet →</a></p>
+        <p>
+          <a href="https://www.alxafrica.com/" target="_blank">
+            <img
+              src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
+              alt="ALX Logo"
+              width="200"
+            />
+          </a>
+        </p>
+
+        <h2>Learner Info</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Age</th>
+              <th>Country</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>John</td>
+              <td>25</td>
+              <td>USA</td>
+            </tr>
+            <tr>
+              <td>Emily</td>
+              <td>28</td>
+              <td>Canada</td>
+            </tr>
+            <tr>
+              <td>Michael</td>
+              <td>32</td>
+              <td>Australia</td>
+            </tr>
+            <tr>
+              <td>Sophia</td>
+              <td>21</td>
+              <td>UK</td>
+            </tr>
+          </tbody>
+        </table>
+      </article>
+
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+
+    <footer>
+      <p>Made by Deborah Akinbola - <a href="https://your-link.com" target="_blank">here</a></p>
+    </footer>
+  </body>
+</html>
