--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -2,17 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>My First Web Page</title>
+    <title>Deborah Akinbola - Tweets</title>
   </head>
   <body>
-    <p>Here’s a tweet I like:</p>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </header>
 
-<blockquote class="twitter-tweet">
-  <a href="https://twitter.com/Interior/status/463440424141459456"></a>
-</blockquote> 
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <main>
+      <article>
+        <h1>Check out this Tweet!</h1>
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">
+            Want to become a Software Engineer? Start here! 🚀
+          </p>
+          &mdash; Julien Barbier ✨ (@julienbarbier42)
+          <a href="https://twitter.com/julienbarbier42/status/1928459292677742813">April 24, 2024</a>
+        </blockquote>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </article>
 
-<p><a href="index.html">Go back to homepage</a></p>
-    <p>Hello world!</p>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+
+    <footer>
+      <p>Made by Deborah Akinbola - <a href="https://your-link.com" target="_blank">here</a></p>
+    </footer>
   </body>
 </html>
