--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -45,7 +45,7 @@
       <h2>Contact</h2>
       <p><a href="mailto:amanda@example.com">akinboladeborah400@gmail.com</a></p>
       <p><a href="https://linkedin.com/in/https://www.linkedin.com/in/deborah-akinbola-51456a35a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank">LinkedIn</a></p>
-      <p><a href="https://github.com/amanda" target="_blank">GitHub</a></p>
+      <p><a href="https://github.com/DebbyA007" target="_blank">GitHub</a></p>
     </section>
 
     <footer>
